[metadata]
name = modelarchive
url = https://github.com/seung-lab/modelarchive
description-content-type = text/markdown
description-file = README.md
author = Barak Nehoran
author-email = bnehoran@users.noreply.github.com
home-page = https://github.com/seung-lab/modelarchive
license = BSD
classifiers =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = modelarchive
